@@ -1,108 +1,70 @@
 package com.trion.ootd.repository;
 
 import com.trion.ootd.entity.Clothing;
-import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Repository;
-import software.amazon.awssdk.enhanced.dynamodb.DynamoDbEnhancedClient;
-import software.amazon.awssdk.enhanced.dynamodb.DynamoDbTable;
-import software.amazon.awssdk.enhanced.dynamodb.Expression;
-import software.amazon.awssdk.enhanced.dynamodb.Key;
-import software.amazon.awssdk.enhanced.dynamodb.TableSchema;
-import software.amazon.awssdk.enhanced.dynamodb.model.QueryConditional;
-import software.amazon.awssdk.enhanced.dynamodb.model.QueryEnhancedRequest;
-import software.amazon.awssdk.services.dynamodb.model.AttributeValue;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.stream.Collectors;
 
-/**
- * DynamoDB를 사용한 의류(Clothing) 리포지토리 구현체
- */
+@Slf4j
 @Repository
-@RequiredArgsConstructor
 public class DynamoDbClothingRepository implements ClothingRepository {
 
-    private static final String TABLE_NAME = "Clothing";
-
-    private final DynamoDbEnhancedClient enhancedClient;
-
-    private DynamoDbTable<Clothing> getTable() {
-        return enhancedClient.table(TABLE_NAME, TableSchema.fromBean(Clothing.class));
-    }
+    // 메모리 기반 저장소 (개발/테스트용)
+    private static final Map<String, List<Clothing>> clothingStore = new ConcurrentHashMap<>();
 
     @Override
     public void save(Clothing clothing) {
-        getTable().putItem(clothing);
+        log.info("Saving clothing: {}", clothing.getId());
+        String userId = clothing.getUserId();
+        clothingStore.computeIfAbsent(userId, k -> new ArrayList<>()).add(clothing);
     }
 
     @Override
     public Optional<Clothing> findById(String userId, String id) {
-        Key key = Key.builder()
-                .partitionValue(userId)
-                .sortValue(id)
-                .build();
-
-        Clothing clothing = getTable().getItem(key);
-        return Optional.ofNullable(clothing);
+        log.info("Finding clothing: {} for user: {}", id, userId);
+        List<Clothing> userClothings = clothingStore.getOrDefault(userId, new ArrayList<>());
+        return userClothings.stream()
+                .filter(c -> c.getId().equals(id))
+                .findFirst();
     }
 
     @Override
     public List<Clothing> findByUserId(String userId) {
-        QueryConditional queryConditional = QueryConditional.keyEqualTo(
-                Key.builder().partitionValue(userId).build()
-        );
-
-        QueryEnhancedRequest query = QueryEnhancedRequest.builder()
-                .queryConditional(queryConditional)
-                .build();
-
-        return getTable().query(query)
-                .stream()
-                .flatMap(page -> page.items().stream())
-                .toList();
+        log.info("Finding all clothing for user: {}", userId);
+        return clothingStore.getOrDefault(userId, new ArrayList<>());
     }
 
     @Override
     public List<Clothing> findByUserIdAndCategory(String userId, String category) {
-        QueryConditional queryConditional = QueryConditional.keyEqualTo(
-                Key.builder().partitionValue(userId).build()
-        );
-
-        Expression filterExpression = Expression.builder()
-                .expression("category = :category")
-                .expressionValues(Map.of(":category", AttributeValue.builder().s(category).build()))
-                .build();
-
-        QueryEnhancedRequest query = QueryEnhancedRequest.builder()
-                .queryConditional(queryConditional)
-                .filterExpression(filterExpression)
-                .build();
-
-        return getTable().query(query)
-                .stream()
-                .flatMap(page -> page.items().stream())
-                .toList();
+        log.info("Finding clothing by category: {} for user: {}", category, userId);
+        List<Clothing> userClothings = clothingStore.getOrDefault(userId, new ArrayList<>());
+        return userClothings.stream()
+                .filter(c -> c.getCategory().equals(category))
+                .collect(Collectors.toList());
     }
 
     @Override
     public void delete(String userId, String id) {
-        Key key = Key.builder()
-                .partitionValue(userId)
-                .sortValue(id)
-                .build();
-
-        getTable().deleteItem(key);
+        log.info("Deleting clothing: {} for user: {}", id, userId);
+        List<Clothing> userClothings = clothingStore.getOrDefault(userId, new ArrayList<>());
+        userClothings.removeIf(c -> c.getId().equals(id));
     }
 
     @Override
     public void deleteByUserId(String userId) {
-        List<Clothing> clothings = findByUserId(userId);
-        clothings.forEach(clothing -> delete(userId, clothing.getId()));
+        log.info("Deleting all clothing for user: {}", userId);
+        clothingStore.remove(userId);
     }
 
     @Override
     public long countByUserId(String userId) {
-        return findByUserId(userId).size();
+        log.info("Counting clothing for user: {}", userId);
+        return clothingStore.getOrDefault(userId, new ArrayList<>()).size();
     }
 }
